--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=mobile-web-app-capable content=yes>　　　　　<meta name=apple-mobile-web-app-title id=base_meta_title><title>Bang vape</title><link rel="shortcut icon" type=image/x-icon href=https://app.bangvape.xyz/favicon.ico><link rel=apple-touch-icon href=https://app.bangvape.xyz/icon-76@2x.png><link rel=apple-touch-icon-precomposed href=https://app.bangvape.xyz/icon-76@2x.png><script>// let icon = document.getElementById("base_link_icon")
-			// let aicon = document.getElementById("apple_touch_icon")
-			// let title = document.getElementById("base_meta_title")
-			// icon.href = "./icon-1024.png"
-			// aicon.href = "./icon-1024.png"
-			// title.content = "Bang vape"
+<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=mobile-web-app-capable content=yes>　　　　　<meta name=apple-mobile-web-app-title id=base_meta_title><title>Bang vape</title><link rel="shortcut icon" type=image/x-icon href=https://app.bangvape.xyz/favicon.ico><script>function appendJQCDN() {
+				var head = document.head || document.getElementsByTagName('head')[0];
+				var link = document.createElement('link');
+				link.setAttribute("rel", "apple-touch-icon");
+				link.setAttribute("href", "https://app.bangvape.xyz/icon-1024.png");
+				head.appendChild(link);
+			}
+
+			appendJQCDN()
 
 			var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS
 				.supports('top: constant(a)'))
@@ -251,4 +254,4 @@
 			/* 大型设备（大台式电脑，1200px 以上） */
 			@media screen and (min-width:1200px) {
 				/* // 大屏幕  大于1200px */
-			}</style></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id=app><div id=loader-wrapper><div id=loader></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div><div class=load_title>正在加载...</div></div></div></body></html><script src=./static/js/chunk-vendors.eb1b5313.js></script><script src=./static/js/index.9340fdc8.js></script>
+			}</style></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id=app><div id=loader-wrapper><div id=loader></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div><div class=load_title>正在加载...</div></div></div></body></html><script src=./static/js/chunk-vendors.eb1b5313.js></script><script src=./static/js/index.7d62ed19.js></script>
