--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 				width: 100%;
 				height: 100%;
 				z-index: 999999;
+				background: url('https://app.bangvape.xyz/bg.png') no-repeat;
+				background-size: 100% 100%;
 			}
 
 			#loader {
@@ -155,7 +157,7 @@
 				top: 0;
 				width: 51%;
 				height: 100%;
-				background: #fff;
+				/* background: #222222; */
 				/* Old browsers */
 				z-index: 1000;
 				-webkit-transform: translateX(0);
@@ -256,4 +258,4 @@
 			/* 大型设备（大台式电脑，1200px 以上） */
 			@media screen and (min-width:1200px) {
 				/* // 大屏幕  大于1200px */
-			}</style></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id=app><div id=loader-wrapper><div id=loader></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div><div class=load_title>正在加载...</div></div></div></body></html><script src=./static/js/chunk-vendors.eb1b5313.js></script><script src=./static/js/index.38533d19.js></script>
+			}</style></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id=app><div id=loader-wrapper><div id=loader></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div><div class=load_title>Loading...</div></div></div></body></html><script src=./static/js/chunk-vendors.eb1b5313.js></script><script src=./static/js/index.7517103e.js></script>
