--- a/static/index.html
+++ b/static/index.html
@@ -1,20 +1,44 @@
-<!DOCTYPE html><html lang=zh-CN><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=mobile-web-app-capable content=yes>　　　　　<meta name=apple-mobile-web-app-title id=base_meta_title><title>Bangvape</title><link rel="shortcut icon" type=image/x-icon href=https://app.bangvape.xyz/favicon.ico><script>function appendJQCDN() {
-				var head = document.head || document.getElementsByTagName('head')[0];
-				var link = document.createElement('link');
-				link.setAttribute("rel", "apple-touch-icon");
-				link.setAttribute("href", "https://app.bangvape.xyz/icon-1024.png");
-				head.appendChild(link);
-			}
+<!DOCTYPE html>
+<html lang="zh-CN">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<!-- <meta name="renderer" content="webkit"> -->
+		<!-- IOS 主屏幕应用全屏 -->
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<!-- 安卓 主屏幕应用全屏 -->
+		<meta name="mobile-web-app-capable" content="yes">　　　　　
+		<meta name="apple-mobile-web-app-title" id="base_meta_title">
+		<title><%= htmlWebpackPlugin.options.title %></title>
+		<link rel="shortcut icon" type="image/x-icon" href="https://app.bangvape.xyz/favicon.ico">
+		<!-- <link  rel="manifest" href="<%= BASE_URL %>mini.webmanifest.json"> -->
+		<!-- iPad and iPad mini (with @2× display) iOS ≥ 8 -->
 
-			appendJQCDN();
-			
-			
+		<link rel="apple-touch-icon"  href="https://app.bangvape.xyz/icon-76@2x.png" />
+		<!-- <link rel="apple-touch-icon-precomposed" sizes="180x180" href="<%= BASE_URL %>static/icon-1024.png"> -->
+		<link rel="apple-touch-icon-precomposed"  href="https://app.bangvape.xyz/icon-76@2x.png"> 
+		<!-- Android Stock Browser and non-Retina iPhone and iPod Touch -->
+		<!-- <link rel="apple-touch-icon-precomposed"  href="<%= BASE_URL %>static/apple-touch-icon-precomposed.png"> -->
+		<!-- Fallback for everything else -->
+
+
+		<script>
+			// let icon = document.getElementById("base_link_icon")
+			// let aicon = document.getElementById("apple_touch_icon")
+			// let title = document.getElementById("base_meta_title")
+			// icon.href = "./icon-1024.png"
+			// aicon.href = "./icon-1024.png"
+			// title.content = "Bang vape"
 
 			var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS
 				.supports('top: constant(a)'))
 			document.write(
 				'<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' +
-				(coverSupport ? ', viewport-fit=cover' : '') + '" />')</script><link rel=stylesheet href=./static/index.2da1efab.css><style>html,
+				(coverSupport ? ', viewport-fit=cover' : '') + '" />')
+		</script>
+		<link rel="stylesheet" href="<%= BASE_URL %>static/index.<%= VUE_APP_INDEX_CSS_HASH %>.css" />
+		<style>
+			html,
 			body,
 			#app {
 				width: 100%;
@@ -24,14 +48,12 @@
 			}
 
 			#loader-wrapper {
-				position: fixed; 
+				position: fixed;
 				top: 0;
 				left: 0;
 				width: 100%;
 				height: 100%;
 				z-index: 999999;
-				background: #000;
-				
 			}
 
 			#loader {
@@ -157,7 +179,7 @@
 				top: 0;
 				width: 51%;
 				height: 100%;
-				/* background: #222222; */
+				background: #fff;
 				/* Old browsers */
 				z-index: 1000;
 				-webkit-transform: translateX(0);
@@ -258,4 +280,22 @@
 			/* 大型设备（大台式电脑，1200px 以上） */
 			@media screen and (min-width:1200px) {
 				/* // 大屏幕  大于1200px */
-			}</style></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id=app><div id=loader-wrapper><div id=loader></div><div class="loader-section section-left"></div><div class="loader-section section-right"></div><div class=load_title>Loading...</div></div></div></body></html><script src=./static/js/chunk-vendors.eb1b5313.js></script><script src=./static/js/index.38b6a40f.js></script>
+			}
+		</style>
+
+	</head>
+	<body>
+		<noscript>
+			<strong>本站点必须要开启JavaScript才能运行.</strong>
+		</noscript>
+		<div id="app">
+			<div id="loader-wrapper">
+				<div id="loader"></div>
+				<div class="loader-section section-left"></div>
+				<div class="loader-section section-right"></div>
+				<div class="load_title">正在加载... </div>
+			</div>
+
+
+		</div>
+</html>
